2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Added Fedora-specific stuff & error solution to libs/usbdmx/README

2006-Aug-31  Heikki Junnila <hjunnila@users.sf.net>
	* Changed a double value in app.cpp to t_value (int) to get rid of
	  the compiler warning.
	* Changed newdevice.cpp so that if the user has not touched the
	  name field, it will be filled with the device model. If the user
	  types something, the name is not replaced, unless length == 0.
	* Removed libs/usbdmxout/Makefile.in because it is autogenerated.

2006-Mar-05  Stefan Krumm <stefankrumm@users.sf.net>
	* Added a "stop all running functions feature" to the virtual console
	  buttons.
	* Midi input/output works
	* Support for the Behringer BCF2000 USB external fader unit

2006-Feb-12  Stefan Krumm <stefankrumm@users.sf.net>
	* usb2dmx driver for the Peperoni-Light interfaces should be
	  complete. Still missing is a capability for reading from the device.
	* Changed the black-out function in app.cpp to send a writeRange()
	  because sending "0" to individual channels was too slow.

2006-Jan-28  Christin Sühs  <dance-or-die@users.sf.net>
	* Added support for Input Plugins
	* Output Plugin for Peperoni Lighting DMX Dongle with Kernel 2.6

2006-Jan-26  Heikki Junnila <hjunnila@users.sf.net>
	* Added m_stopped=false to Scene::init() to fix a problem in
	  engaging scenes.
	* Changed all xpms to 22x22 png's
	* Updated the year to 2006 in all entries in this Changelog :)

2006-Jan-21  Christin Sühs  <dance-or-die@users.sf.net>
	* Added a slider keybind function.

2006-Jan-19  Heikki Junnila <hjunnila@users.sf.net>
	* Added config/dummy so that the dir would get copied from CVS.

2006-Jan-16  Heikki Junnila <hjunnila@users.sf.net>
	* Added new function manager to vcbuttonproperties

2006-Jan-15  Heikki Junnila <hjunnila@users.sf.net>
	* Made a new version of function manager. It supports now multiple
	  selections and fashions an explorer-like split view.